perf(load-testing): add reconnection storm k6 script
Introduce WebSocket reconnection storm scenario to validate resilience
under rapid connect/disconnect patterns and timeouts. Expand performance
benchmarks and scripts docs with concrete execution guidance and
thresholds to close gaps blocking validation.

Includes:
- New k6 script for reconnection storm scenario
- Expanded performance-benchmarks with execution steps and metrics
- Scripts README updates for running and tuning tests
- Minor codemachine prompt updates used to guide validation

No breaking changes. No secrets added.